2019-08-21  Yannick Moy  <moy@adacore.com>

	* checks.adb (Install_Null_Excluding_Check): Do not install
	check in GNATprove mode.

2019-08-21  Yannick Moy  <moy@adacore.com>

	* sem_spark.adb (Process_Path): Do nothing on address of
	subprogram.

2019-08-21  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_util.adb (Finalize_Address): Deal consistently with
	subtypes of private protected types.

2019-08-21  Piotr Trojanek  <trojanek@adacore.com>

	* exp_util.adb (Corresponding_Runtime_Package): Use high-level
	Is_Protected_Type.
	* sem_ch8.adb (Analyze_Renamed_Entry): Likewise.
	* sem_ch9.adb (Analyze_Requeue): Likewise.

2019-08-21  Javier Miranda  <miranda@adacore.com>

	* sem_util.adb (Update_Named_Associations): Update
	First_Named_Actual when the subprogram call has a single named
	actual.

2019-08-21  Joel Brobecker  <brobecker@adacore.com>

	* doc/Makefile (mk_empty_dirs): New (PHONY) rule.
	(%.html, %.pdf, %.txt, %.info, %.texinfo): Add dependencies on
	mk_empty_dirs.

2019-08-21  Justin Squirek  <squirek@adacore.com>

	* doc/gnat_rm/implementation_defined_pragmas.rst: Modify
	documentation to reflect expected behavior.
	* gnat_rm.texi: Regenerate.
	* sem_prag.adb (Analyze_Pragma): Modify handling of pragma
	Max_Entry_Queue_Length to not reject integer values of negative
	one.
	* sem_util.adb (Get_Max_Queue_Length): Add processing for values
	of negative one to fit within the current scheme.

2019-08-20  Arnaud Charlet  <charlet@adacore.com>

	* exp_unst.adb (Unnest_Subprograms, Unnest_Subprogram): Take
	inlining (-gnatn) into account.

2019-08-20  Ed Schonberg  <schonberg@adacore.com>

	* exp_ch13.adb (Expand_N_Attribute_Definition_Clause, case
	Storage_Size): If the expression for Storage_Size is not static
	it may depend on characterstics of another type that may bot be
	frozen yet, so the elaboration of the expression for the aspect
	must be attached directly to the freeze actions of the type to
	which it applies.
